@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.ui;
 
 import com.intellij.CommonBundle;
@@ -27,15 +27,12 @@ import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.wm.IdeFocusManager;
 import com.intellij.openapi.wm.IdeGlassPaneUtil;
 import com.intellij.openapi.wm.WindowManager;
-import com.intellij.ui.ColorUtil;
-import com.intellij.ui.JBColor;
-import com.intellij.ui.ScreenUtil;
-import com.intellij.ui.UIBundle;
+import com.intellij.ui.*;
 import com.intellij.ui.border.CustomLineBorder;
 import com.intellij.ui.components.JBOptionButton;
 import com.intellij.ui.components.JBScrollPane;
 import com.intellij.ui.components.panels.NonOpaquePanel;
-import com.intellij.ui.mac.TouchbarDataKeys;
+import com.intellij.ui.mac.touchbar.Touchbar;
 import com.intellij.ui.scale.JBUIScale;
 import com.intellij.util.Alarm;
 import com.intellij.util.ReflectionUtil;
@@ -75,6 +72,7 @@ import static javax.swing.JComponent.WHEN_IN_FOCUSED_WINDOW;
  */
 public abstract class DialogWrapper {
   private static final Logger LOG = Logger.getInstance(DialogWrapper.class);
+
   private final JPanel myRoot = new JPanel();
 
   public enum IdeModalityType {
@@ -82,8 +80,7 @@ public abstract class DialogWrapper {
     PROJECT,
     MODELESS;
 
-    @NotNull
-    public Dialog.ModalityType toAwtModality() {
+    public @NotNull Dialog.ModalityType toAwtModality() {
       switch (this) {
         case IDE:
           return Dialog.ModalityType.APPLICATION_MODAL;
@@ -138,8 +135,7 @@ public abstract class DialogWrapper {
   /**
    * The shared instance of default border for dialog's content pane.
    */
-  @NotNull
-  public static Border createDefaultBorder() {
+  public static @NotNull Border createDefaultBorder() {
     return new JBEmptyBorder(UIUtil.getRegularPanelInsets());
   }
 
@@ -178,8 +174,8 @@ public abstract class DialogWrapper {
   private boolean myUserLocationSet;
   private boolean myUserSizeSet;
   private Dimension  myActualSize;
-  private List<? extends ValidationInfo> myInfo = Collections.emptyList();
-  private @Nullable DoNotAskOption myDoNotAsk;
+  private List<ValidationInfo> myInfo = List.of();
+  private @Nullable com.intellij.openapi.ui.DoNotAskOption myDoNotAsk;
   private Action myYesAction;
   private Action myNoAction;
   private int myCurrentOptionsButtonIndex = -1;
@@ -205,7 +201,7 @@ public abstract class DialogWrapper {
    * @param project     parent window for the dialog will be calculated based on focused window for the
    *                    specified {@code project}. This parameter can be {@code null}. In this case parent window
    *                    will be suggested based on current focused window.
-   * @param canBeParent specifies whether the dialog can be parent for other windows. This parameter is used
+   * @param canBeParent specifies whether the dialog can be a parent for other windows. This parameter is used
    *                    by {@code WindowManager}.
    * @throws IllegalStateException if the dialog is invoked not on the event dispatch thread
    */
@@ -232,7 +228,7 @@ public abstract class DialogWrapper {
     myPeer = parentComponent == null ? createPeer(project, canBeParent, project == null ? IdeModalityType.IDE : ideModalityType)
                                      : createPeer(parentComponent, canBeParent);
     myCreateSouthSection = createSouth;
-    final Window window = myPeer.getWindow();
+    Window window = myPeer.getWindow();
     if (window != null) {
       myResizeListener = new ComponentAdapter() {
         @Override
@@ -251,7 +247,7 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * Creates modal {@code DialogWrapper} that can be parent for other windows.
+   * Creates modal {@code DialogWrapper} that can be a parent for other windows.
    * The currently active window will be the dialog's parent.
    *
    * @param project parent window for the dialog will be calculated based on focused window for the
@@ -267,7 +263,7 @@ public abstract class DialogWrapper {
   /**
    * Creates modal {@code DialogWrapper}. The currently active window will be the dialog's parent.
    *
-   * @param canBeParent specifies whether the dialog can be parent for other windows. This parameter is used
+   * @param canBeParent specifies whether the dialog can be a parent for other windows. This parameter is used
    *                    by {@code WindowManager}.
    * @throws IllegalStateException if the dialog is invoked not on the event dispatch thread
    */
@@ -300,9 +296,9 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * @param parent      parent component which is used to calculate heavy weight window ancestor.
+   * @param parent      parent component which is used to calculate heavyweight window ancestor.
    *                    {@code parent} cannot be {@code null} and must be showing.
-   * @param canBeParent can be parent
+   * @param canBeParent can be a parent
    * @throws IllegalStateException if the dialog is invoked not on the event dispatch thread
    */
   protected DialogWrapper(@NotNull Component parent, boolean canBeParent) {
@@ -312,23 +308,29 @@ public abstract class DialogWrapper {
     createDefaultActions();
   }
 
-  @NotNull
-  @NlsContexts.Checkbox
-  protected String getDoNotShowMessage() {
+  protected @NotNull @NlsContexts.Checkbox String getDoNotShowMessage() {
     return UIBundle.message("dialog.options.do.not.show");
   }
 
+  public void setDoNotAskOption(@Nullable com.intellij.openapi.ui.DoNotAskOption doNotAsk) {
+    myDoNotAsk = doNotAsk;
+  }
+
+  /**
+   * @deprecated Please use setDoNotAskOption(com.intellij.openapi.ui.DoNotAskOption) instead
+   */
+  @Deprecated
+  @ApiStatus.ScheduledForRemoval(inVersion = "2022.2")
   public void setDoNotAskOption(@Nullable DoNotAskOption doNotAsk) {
     myDoNotAsk = doNotAsk;
   }
 
-  @NotNull
-  protected Alarm.ThreadToUse getValidationThreadToUse() {
+  protected @NotNull Alarm.ThreadToUse getValidationThreadToUse() {
     return Alarm.ThreadToUse.SWING_THREAD;
   }
 
   /**
-   * Allows to postpone first start of validation
+   * Allows postponing first start of validation
    *
    * @return {@code false} if start validation in {@code init()} method
    */
@@ -337,7 +339,7 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * Allow to disable continuous validation.
+   * Allow disabling continuous validation.
    * When disabled {@link #initValidation()} needs to be invoked after every change of the dialog to validate.
    *
    * @return {@code false} to disable continuous validation
@@ -354,8 +356,7 @@ public abstract class DialogWrapper {
    *
    * @see <a href="https://jetbrains.design/intellij/principles/validation_errors/">Validation errors guidelines</a>
    */
-  @Nullable
-  protected ValidationInfo doValidate() {
+  protected @Nullable ValidationInfo doValidate() {
     return null;
   }
 
@@ -371,8 +372,7 @@ public abstract class DialogWrapper {
    *
    * @see <a href="https://jetbrains.design/intellij/principles/validation_errors/">Validation errors guidelines</a>
    */
-  @NotNull
-  protected List<ValidationInfo> doValidateAll() {
+  protected @NotNull List<ValidationInfo> doValidateAll() {
     ValidationInfo vi = doValidate();
 
     if (!myValidateCallbacks.isEmpty()) {
@@ -387,7 +387,7 @@ public abstract class DialogWrapper {
       return result;
     }
 
-    return vi != null ? Collections.singletonList(vi) : Collections.emptyList();
+    return vi != null ? List.of(vi) : List.of();
   }
 
   public void setValidationDelay(int delay) {
@@ -472,17 +472,16 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * Creates border for dialog's content pane. By default content
-   * pane has has empty border with {@code (8,12,8,12)} insets. Subclasses can
+   * Creates border for dialog's content pane. By default, content
+   * pane has an empty border with {@code (8,12,8,12)} insets. Subclasses can
    * return {@code null} for no border.
    *
    * @return content pane border
    */
-  @Nullable
-  protected Border createContentPaneBorder() {
+  protected @Nullable Border createContentPaneBorder() {
     if (getStyle() == DialogStyle.COMPACT) {
-      if ((SystemInfo.isMac && Registry.is("ide.mac.transparentTitleBarAppearance"))
-          || (SystemInfo.isWindows && SystemInfo.isJetBrainsJvm)) {
+      if ((SystemInfoRt.isMac && Registry.is("ide.mac.transparentTitleBarAppearance", true))
+          || (SystemInfoRt.isWindows && SystemInfo.isJetBrainsJvm)) {
         return JBUI.Borders.customLineTop(JBUI.CurrentTheme.CustomFrameDecorations.separatorForeground());
       }
       return JBUI.Borders.empty();
@@ -500,7 +499,7 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * Creates panel located at the south of the content pane. By default that
+   * Creates panel located at the south of the content pane. By default, that
    * panel contains dialog's buttons. This default implementation uses {@code createActions()}
    * and {@code createJButtonForAction(Action)} methods to construct the panel.
    *
@@ -553,20 +552,21 @@ public abstract class DialogWrapper {
     List<JButton> rightSideButtons = createButtons(actions);
 
     myButtonMap.clear();
-    int index = 0;
     for (JButton button : ContainerUtil.concat(leftSideButtons, rightSideButtons)) {
       myButtonMap.put(button.getAction(), button);
       if (button instanceof JBOptionButton) {
         myOptionsButtons.add((JBOptionButton)button);
       }
-      TouchbarDataKeys.putDialogButtonDescriptor(button, index++).setMainGroup(index >= leftSideButtons.size());
     }
 
-    return createSouthPanel(leftSideButtons, rightSideButtons, addHelpToLeftSide);
+    JComponent result = createSouthPanel(leftSideButtons, rightSideButtons, addHelpToLeftSide);
+    if (ApplicationManager.getApplication() != null) {
+      Touchbar.setButtonActions(result, leftSideButtons, rightSideButtons, null);
+    }
+    return result;
   }
 
-  @NotNull
-  protected JButton createHelpButton(@NotNull Insets insets) {
+  protected @NotNull JButton createHelpButton(@NotNull Insets insets) {
     JButton helpButton = createHelpButton(getHelpAction());
     setHelpTooltip(helpButton);
     helpButton.setMargin(insets);
@@ -591,8 +591,7 @@ public abstract class DialogWrapper {
     helpButton.setToolTipText(ActionsBundle.actionDescription("HelpTopics"));
   }
 
-  @NotNull
-  private static List<Action> flattenOptionsActions(@NotNull List<? extends Action> actions) {
+  private static @NotNull List<Action> flattenOptionsActions(@NotNull List<? extends Action> actions) {
     List<Action> newActions = new ArrayList<>();
     for (Action action : actions) {
       newActions.add(action);
@@ -607,8 +606,7 @@ public abstract class DialogWrapper {
     return false;
   }
 
-  @NotNull
-  protected DialogStyle getStyle() {
+  protected @NotNull DialogStyle getStyle() {
     return DialogStyle.NO_STYLE;
   }
 
@@ -616,17 +614,7 @@ public abstract class DialogWrapper {
     return !myCheckBoxDoNotShowDialog.isSelected();
   }
 
-  /**
-   * @deprecated Do not use. Always returns false
-   */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
-  public boolean isTypeAheadEnabled() {
-      return false;
-  }
-
-  @NotNull
-  private List<JButton> createButtons(@NotNull List<? extends Action> actions) {
+  private @NotNull List<JButton> createButtons(@NotNull List<? extends Action> actions) {
     List<JButton> buttons = new ArrayList<>();
     for (Action action : actions) {
       buttons.add(createJButtonForAction(action));
@@ -634,10 +622,9 @@ public abstract class DialogWrapper {
     return buttons;
   }
 
-  @NotNull
-  private JPanel createSouthPanel(@NotNull List<? extends JButton> leftSideButtons,
-                                  @NotNull List<? extends JButton> rightSideButtons,
-                                  boolean addHelpToLeftSide) {
+  private @NotNull JPanel createSouthPanel(@NotNull List<? extends JButton> leftSideButtons,
+                                           @NotNull List<? extends JButton> rightSideButtons,
+                                           boolean addHelpToLeftSide) {
     JPanel panel = new SouthPanel(getStyle());
 
     if (myDoNotAsk != null) {
@@ -649,7 +636,7 @@ public abstract class DialogWrapper {
     JComponent doNotAskCheckbox = createDoNotAskCheckbox();
 
     JPanel lrButtonsPanel = new NonOpaquePanel(new GridBagLayout());
-    Insets insets = SystemInfoRt.isMac && UIUtil.isUnderIntelliJLaF() ? JBInsets.create(0, 8) : JBUI.emptyInsets();
+    Insets insets = JBUI.emptyInsets();
 
     if (!rightSideButtons.isEmpty() || !leftSideButtons.isEmpty()) {
       GridBag bag = new GridBag().setDefaultInsets(insets);
@@ -702,7 +689,7 @@ public abstract class DialogWrapper {
     panel.add(lrButtonsPanel, BorderLayout.CENTER);
 
     if (getStyle() == DialogStyle.COMPACT) {
-      final Color color = UIManager.getColor("DialogWrapper.southPanelDivider");
+      Color color = UIManager.getColor("DialogWrapper.southPanelDivider");
       Border line = new CustomLineBorder(color != null ? color : OnePixelDivider.BACKGROUND, 1, 0, 0, 0);
       panel.setBorder(new CompoundBorder(line, JBUI.Borders.empty(8, 12)));
     }
@@ -713,20 +700,17 @@ public abstract class DialogWrapper {
     return panel;
   }
 
-  @Nullable
-  protected JComponent createDoNotAskCheckbox() {
+  protected @Nullable JComponent createDoNotAskCheckbox() {
     return myCheckBoxDoNotShowDialog != null && myCheckBoxDoNotShowDialog.isVisible() ? myCheckBoxDoNotShowDialog : null;
   }
 
   private static final JBValue BASE_BUTTON_GAP = new JBValue.Float(UIUtil.isUnderWin10LookAndFeel() ? 8 : 12);
 
-  @NotNull
-  protected JPanel createButtonsPanel(@NotNull List<? extends JButton> buttons) {
+  protected @NotNull JPanel createButtonsPanel(@NotNull List<? extends JButton> buttons) {
     return layoutButtonsPanel(buttons);
   }
 
-  @NotNull
-  public static JPanel layoutButtonsPanel(@NotNull List<? extends JButton> buttons) {
+  public static @NotNull JPanel layoutButtonsPanel(@NotNull List<? extends JButton> buttons) {
     JPanel buttonsPanel = new NonOpaquePanel();
     buttonsPanel.setLayout(new BoxLayout(buttonsPanel, BoxLayout.X_AXIS));
 
@@ -750,8 +734,7 @@ public abstract class DialogWrapper {
    *
    * @return panel to be shown or null if it's not required
    */
-  @Nullable
-  protected JPanel createSouthAdditionalPanel() {
+  protected @Nullable JPanel createSouthAdditionalPanel() {
     return null;
   }
 
@@ -760,8 +743,7 @@ public abstract class DialogWrapper {
    * @param action should be registered to find corresponding JButton
    * @return button for specified action or null if it's not found
    */
-  @Nullable
-  protected JButton getButton(@NotNull Action action) {
+  protected @Nullable JButton getButton(@NotNull Action action) {
     return myButtonMap.get(action);
   }
 
@@ -778,7 +760,7 @@ public abstract class DialogWrapper {
     JButton button = createJButtonForAction(action, getRootPane());
 
     int mnemonic = button.getMnemonic();
-    final Object name = action.getValue(Action.NAME);
+    Object name = action.getValue(Action.NAME);
     if (mnemonic == KeyEvent.VK_Y && "Yes".equals(name)) {
       myYesAction = action;
     }
@@ -793,8 +775,7 @@ public abstract class DialogWrapper {
     return button;
   }
 
-  @NotNull
-  public static JButton createJButtonForAction(@NotNull Action action, @Nullable JRootPane rootPane) {
+  public static @NotNull JButton createJButtonForAction(@NotNull Action action, @Nullable JRootPane rootPane) {
     JButton button;
     if (action instanceof OptionAction && UISettings.getShadowInstance().getAllowMergeButtons()) {
       button = createJOptionsButton((OptionAction)action);
@@ -811,7 +792,7 @@ public abstract class DialogWrapper {
     button.setText(pair.second);
     int mnemonic = pair.first;
 
-    final Object value = action.getValue(Action.MNEMONIC_KEY);
+    Object value = action.getValue(Action.MNEMONIC_KEY);
     if (value instanceof Integer) {
       mnemonic = (Integer)value;
     }
@@ -826,15 +807,13 @@ public abstract class DialogWrapper {
     return button;
   }
 
-  @NotNull
-  private static JButton createJOptionsButton(@NotNull OptionAction action) {
+  private static @NotNull JButton createJOptionsButton(@NotNull OptionAction action) {
     JBOptionButton optionButton = new JBOptionButton(action, action.getOptions());
     optionButton.setOptionTooltipText(getDefaultTooltip());
     return optionButton;
   }
 
-  @NotNull
-  public static Pair<Integer, @Nls String> extractMnemonic(@Nullable @Nls String text) {
+  public static @NotNull Pair<Integer, @Nls String> extractMnemonic(@Nullable @Nls String text) {
     if (text == null) return pair(0, null);
 
     int mnemonic = 0;
@@ -849,7 +828,7 @@ public abstract class DialogWrapper {
         }
         ch = text.charAt(i);
         if (ch != '_' && ch != '&') {
-          // Mnemonic is case insensitive.
+          // Mnemonic is case-insensitive
           int vk = ch;
           if (vk >= 'a' && vk <= 'z') {
             vk -= 'a' - 'A';
@@ -862,33 +841,27 @@ public abstract class DialogWrapper {
     return pair(mnemonic, plainText.toString());
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(@NotNull Component parent, boolean canBeParent) {
+  protected @NotNull DialogWrapperPeer createPeer(@NotNull Component parent, boolean canBeParent) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, parent, canBeParent);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(Window owner, boolean canBeParent, IdeModalityType ideModalityType) {
+  protected @NotNull DialogWrapperPeer createPeer(Window owner, boolean canBeParent, IdeModalityType ideModalityType) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, owner, canBeParent, ideModalityType);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(Window owner, boolean canBeParent, boolean applicationModalIfPossible) {
+  protected @NotNull DialogWrapperPeer createPeer(Window owner, boolean canBeParent, boolean applicationModalIfPossible) {
     return createPeer(owner, canBeParent, applicationModalIfPossible ? IdeModalityType.IDE : IdeModalityType.PROJECT);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent, @NotNull IdeModalityType ideModalityType) {
+  protected @NotNull DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent, @NotNull IdeModalityType ideModalityType) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, project, canBeParent, ideModalityType);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent) {
+  protected @NotNull DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, project, canBeParent);
   }
 
-  @Nullable
-  protected JComponent createTitlePane() {
+  protected @Nullable JComponent createTitlePane() {
     return null;
   }
 
@@ -899,8 +872,7 @@ public abstract class DialogWrapper {
    *
    * @return north panel
    */
-  @Nullable
-  protected JComponent createNorthPanel() {
+  protected @Nullable JComponent createNorthPanel() {
     return null;
   }
 
@@ -909,8 +881,7 @@ public abstract class DialogWrapper {
    * center of the dialog's content pane. The implementation can return {@code null}
    * value. In this case there will be no options panel.
    */
-  @Nullable
-  protected abstract JComponent createCenterPanel();
+  protected abstract @Nullable JComponent createCenterPanel();
 
   /** @see Window#toFront() */
   public void toFront() {
@@ -955,7 +926,7 @@ public abstract class DialogWrapper {
     }
     myButtonMap.clear();
 
-    final JRootPane rootPane = getRootPane();
+    JRootPane rootPane = getRootPane();
     // if rootPane = null, dialog has already been disposed
     if (rootPane != null) {
       unregisterKeyboardActions(rootPane);
@@ -1065,6 +1036,11 @@ public abstract class DialogWrapper {
     doOKAction();
   }
 
+  @ApiStatus.Internal
+  public final @NotNull List<ValidationInfo> performValidateAll() {
+    return doValidateAll();
+  }
+
   /**
    * This method is invoked by default implementation of "OK" action. It just closes dialog
    * with {@code OK_EXIT_CODE}. This is convenient place to override functionality of "OK" action.
@@ -1098,7 +1074,7 @@ public abstract class DialogWrapper {
   /**
    * Creates actions for dialog.
    * <p/>
-   * By default "OK" and "Cancel" actions are returned. The "Help" action is automatically added if
+   * By default, "OK" and "Cancel" actions are returned. The "Help" action is automatically added if
    * {@link #getHelpId()} returns non-null value.
    * <p/>
    * Each action is represented by {@code JButton} created by {@link #createJButtonForAction(Action)}.
@@ -1124,8 +1100,7 @@ public abstract class DialogWrapper {
    * {@code doOKAction()} method.
    * @see #doOKAction
    */
-  @NotNull
-  protected Action getOKAction() {
+  protected @NotNull Action getOKAction() {
     return myOKAction;
   }
 
@@ -1134,8 +1109,7 @@ public abstract class DialogWrapper {
    * {@code doCancelAction()} method.
    * @see #doCancelAction
    */
-  @NotNull
-  protected Action getCancelAction() {
+  protected @NotNull Action getCancelAction() {
     return myCancelAction;
   }
 
@@ -1144,8 +1118,7 @@ public abstract class DialogWrapper {
    * {@code doHelpAction()} method.
    * @see #doHelpAction
    */
-  @NotNull
-  protected Action getHelpAction() {
+  protected @NotNull Action getHelpAction() {
     return myHelpAction;
   }
 
@@ -1188,13 +1161,11 @@ public abstract class DialogWrapper {
    *
    * @return dimension service key
    */
-  @Nullable @NonNls
-  protected String getDimensionServiceKey() {
+  protected @NonNls @Nullable String getDimensionServiceKey() {
     return null;
   }
 
-  @Nullable
-  public final @NonNls String getDimensionKey() {
+  public final @NonNls @Nullable String getDimensionKey() {
     return getDimensionServiceKey();
   }
 
@@ -1211,8 +1182,7 @@ public abstract class DialogWrapper {
    * @return component which should be focused when the dialog appears
    * on the screen.
    */
-  @Nullable
-  public JComponent getPreferredFocusedComponent() {
+  public @Nullable JComponent getPreferredFocusedComponent() {
     if (myPreferredFocusedComponentFromPanel != null) {
       return myPreferredFocusedComponentFromPanel;
     }
@@ -1289,7 +1259,7 @@ public abstract class DialogWrapper {
     ensureEventDispatchThread();
     myErrorText = new ErrorText(getErrorTextAlignment());
     myErrorText.setVisible(false);
-    final ComponentAdapter resizeListener = new ComponentAdapter() {
+    ComponentAdapter resizeListener = new ComponentAdapter() {
       private int myHeight;
 
       @Override
@@ -1315,15 +1285,6 @@ public abstract class DialogWrapper {
     Disposer.register(myDisposable, () -> myErrorText.myLabel.removeComponentListener(resizeListener));
 
     myRoot.setLayout(createRootLayout());
-    //{
-    //  @Override
-    //  public void paint(Graphics g) {
-    //    if (ApplicationManager.getApplication() != null) {
-    //      UISettings.setupAntialiasing(g);
-    //    }
-    //    super.paint(g);
-    //  }
-    //};
     myPeer.setContentPane(myRoot);
 
     AnAction toggleShowOptions = DumbAwareAction.create(e -> expandNextOptionButton());
@@ -1340,12 +1301,12 @@ public abstract class DialogWrapper {
     JComponent centerSection = new JPanel(new BorderLayout());
     myRoot.add(centerSection, BorderLayout.CENTER);
 
-    final JComponent n = createNorthPanel();
+    JComponent n = createNorthPanel();
     if (n != null) {
       centerSection.add(n, BorderLayout.NORTH);
     }
 
-    final JComponent centerPanel = createCenterPanel();
+    JComponent centerPanel = createCenterPanel();
     if (centerPanel != null) {
       centerPanel.putClientProperty(DIALOG_CONTENT_PANEL_PROPERTY, true);
       centerSection.add(centerPanel, BorderLayout.CENTER);
@@ -1369,14 +1330,14 @@ public abstract class DialogWrapper {
     }
 
     if (myCreateSouthSection) {
-      final JPanel southSection = new JPanel(new BorderLayout());
+      JPanel southSection = new JPanel(new BorderLayout());
       if (!isVisualPaddingCompensatedOnComponentLevel) {
         southSection.setBorder(JBUI.Borders.empty(0, 12, 8, 12));
       }
       myRoot.add(southSection, BorderLayout.SOUTH);
 
       southSection.add(myErrorText, BorderLayout.CENTER);
-      final JComponent south = createSouthPanel();
+      JComponent south = createSouthPanel();
       if (south != null) {
         southSection.add(south, BorderLayout.SOUTH);
       }
@@ -1395,8 +1356,7 @@ public abstract class DialogWrapper {
     return SwingConstants.LEADING;
   }
 
-  @NotNull
-  protected LayoutManager createRootLayout() {
+  protected @NotNull LayoutManager createRootLayout() {
     return new BorderLayout();
   }
 
@@ -1404,7 +1364,7 @@ public abstract class DialogWrapper {
     new DumbAwareAction() {
       @Override
       public void actionPerformed(@NotNull AnActionEvent e) {
-        final Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
+        Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
         if (owner instanceof JButton && owner.isEnabled()) {
           ((JButton)owner).doClick();
         }
@@ -1412,7 +1372,7 @@ public abstract class DialogWrapper {
 
       @Override
       public void update(@NotNull AnActionEvent e) {
-        final Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
+        Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
         e.getPresentation().setEnabled(owner instanceof JButton && owner.isEnabled());
       }
     }.registerCustomShortcutSet(CustomShortcutSet.fromString("ENTER"), root, disposable);
@@ -1431,7 +1391,7 @@ public abstract class DialogWrapper {
   protected void startTrackingValidation() {
     if (!continuousValidation()) return;
     SwingUtilities.invokeLater(() -> {
-      if (!myValidationStarted && !myDisposed) {
+      if (!myValidationStarted) {
         myValidationStarted = true;
         initValidation();
       }
@@ -1439,12 +1399,13 @@ public abstract class DialogWrapper {
   }
 
   protected final void initValidation() {
+    if (myDisposed) return;
     myValidationAlarm.cancelAllRequests();
-    final Runnable validateRequest = () -> {
+    Runnable validateRequest = () -> {
       if (myDisposed) return;
       updateErrorInfo(doValidateAll());
 
-      if (!myDisposed && continuousValidation()) {
+      if (continuousValidation()) {
         initValidation();
       }
     };
@@ -1453,17 +1414,16 @@ public abstract class DialogWrapper {
       // null if headless
       JRootPane rootPane = getRootPane();
       myValidationAlarm.addRequest(validateRequest, myValidationDelay,
-                                   ApplicationManager.getApplication() == null
-                                   ? null
-                                   : rootPane == null ? ModalityState.current() : ModalityState.stateForComponent(rootPane));
+                                   ApplicationManager.getApplication() == null ? null :
+                                   rootPane != null ? ModalityState.stateForComponent(rootPane) :
+                                   ModalityState.current());
     }
     else {
       myValidationAlarm.addRequest(validateRequest, myValidationDelay);
     }
   }
 
-  @NotNull
-  protected JComponent createContentPane() {
+  protected @NotNull JComponent createContentPane() {
     return new JPanel();
   }
 
@@ -1479,8 +1439,7 @@ public abstract class DialogWrapper {
    *
    * @return initial window size
    */
-  @Nullable
-  public Dimension getInitialSize() {
+  public @Nullable Dimension getInitialSize() {
     if (myUserSizeSet) return myUserBounds.getSize();
     return null;
   }
@@ -1489,11 +1448,9 @@ public abstract class DialogWrapper {
     return myPeer.getPreferredSize();
   }
 
-  /**
-   * @deprecated Dialog action buttons should be right-aligned.
-   */
-  @ApiStatus.ScheduledForRemoval(inVersion = "2022.2")
+  /** @deprecated Dialog action buttons should be right-aligned. */
   @Deprecated
+  @ApiStatus.ScheduledForRemoval(inVersion = "2022.2")
   protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConstants.CENTER, SwingConstants.RIGHT}) int alignment) {
     if (SwingConstants.CENTER != alignment && SwingConstants.RIGHT != alignment) {
       throw new IllegalArgumentException("unknown alignment: " + alignment);
@@ -1501,19 +1458,9 @@ public abstract class DialogWrapper {
     myButtonAlignment = alignment;
   }
 
-  /** @deprecated button margins aren't used anymore. Button style is standardized. */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
-  public final void setButtonsMargin(@SuppressWarnings("unused") Insets insets) { }
-
   public final void setCrossClosesWindow(boolean crossClosesWindow) {
     myCrossClosesWindow = crossClosesWindow;
   }
-
-  /** @deprecated button icons aren't used anymore (except "OK" action). Button style is standardized. */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
-  protected final void setCancelButtonIcon(@SuppressWarnings("unused") Icon icon) { }
 
   protected final void setCancelButtonText(@NlsContexts.Button @NotNull String text) {
     myCancelAction.putValue(Action.NAME, text);
@@ -1557,9 +1504,7 @@ public abstract class DialogWrapper {
   }
 
   /** Returns the help identifier, or {@code null} if no help is available. */
-  @NonNls
-  @Nullable
-  protected String getHelpId() {
+  protected @NonNls @Nullable String getHelpId() {
     return null;
   }
 
@@ -1634,8 +1579,7 @@ public abstract class DialogWrapper {
    * @return dialog location
    * @see JDialog#getLocation
    */
-  @NotNull
-  public Point getLocation() {
+  public @NotNull Point getLocation() {
     return myPeer.getLocation();
   }
 
@@ -1702,8 +1646,7 @@ public abstract class DialogWrapper {
 
   /** @deprecated override {@link #doOKAction()} / {@link #doCancelAction()} or hook on {@link #myDisposable} */
   @Deprecated
-  @NotNull
-  public AsyncResult<Boolean> showAndGetOk() {
+  public @NotNull AsyncResult<Boolean> showAndGetOk() {
     if (isModal()) {
       throw new IllegalStateException("The showAndGetOk() method is for modeless dialogs only");
     }
@@ -1715,6 +1658,8 @@ public abstract class DialogWrapper {
   }
 
   private void doShow() {
+    if (UiInterceptors.tryIntercept(this)) return;
+
     ensureEventDispatchThread();
     registerKeyboardShortcuts();
 
@@ -1730,8 +1675,7 @@ public abstract class DialogWrapper {
    * @return Location in absolute coordinates which is used when dialog has no dimension service key or no position was stored yet.
    * Can return null. In that case dialog will be centered relative to its owner.
    */
-  @Nullable
-  public Point getInitialLocation() {
+  public @Nullable Point getInitialLocation() {
     return myInitialLocationCallback != null
            ? myInitialLocationCallback.compute()
            : myUserLocationSet
@@ -1774,8 +1718,7 @@ public abstract class DialogWrapper {
   /**
    * Return {@code null} if we should ignore <Esc> for window closing.
    */
-  @Nullable
-  protected ActionListener createCancelAction() {
+  protected @Nullable ActionListener createCancelAction() {
     return e -> {
       if (!PopupUtil.handleEscKeyEvent()) {
         doCancelAction(e);
@@ -1796,8 +1739,7 @@ public abstract class DialogWrapper {
     }
   }
 
-  @NotNull
-  private static OptionalInt getEnabledIndexCyclic(@NotNull List<? extends Component> components, int currentIndex, boolean next) {
+  private static @NotNull OptionalInt getEnabledIndexCyclic(@NotNull List<? extends Component> components, int currentIndex, boolean next) {
     assert -1 <= currentIndex && currentIndex <= components.size();
     int start = !next && currentIndex == -1 ? components.size() : currentIndex;
 
@@ -1808,9 +1750,9 @@ public abstract class DialogWrapper {
   }
 
   private void logCloseDialogEvent(int exitCode) {
-    final boolean canRecord = canRecordDialogId();
+    boolean canRecord = canRecordDialogId();
     if (canRecord) {
-      final String dialogId = getClass().getName();
+      String dialogId = getClass().getName();
       if (StringUtil.isNotEmpty(dialogId)) {
         FeatureUsageUiEventsKt.getUiEventLogger().logCloseDialog(dialogId, exitCode, getClass());
       }
@@ -1818,9 +1760,9 @@ public abstract class DialogWrapper {
   }
 
   private void logShowDialogEvent() {
-    final boolean canRecord = canRecordDialogId();
+    boolean canRecord = canRecordDialogId();
     if (canRecord) {
-      final String dialogId = getClass().getName();
+      String dialogId = getClass().getName();
       if (StringUtil.isNotEmpty(dialogId)) {
         FeatureUsageUiEventsKt.getUiEventLogger().logShowDialog(dialogId, getClass());
       }
@@ -1829,7 +1771,7 @@ public abstract class DialogWrapper {
 
   private void logClickOnHelpDialogEvent() {
     if (!canRecordDialogId()) return;
-    final String dialogId = getClass().getName();
+    String dialogId = getClass().getName();
     if (StringUtil.isNotEmpty(dialogId)) {
       FeatureUsageUiEventsKt.getUiEventLogger().logClickOnHelpDialog(dialogId, getClass());
     }
@@ -1904,20 +1846,22 @@ public abstract class DialogWrapper {
         if (info.component != null && info.component.isVisible()) {
           IdeFocusManager.getInstance(null).requestFocus(info.component, true);
         }
-
         if (!isInplaceValidationToolTipEnabled()) {
           DialogEarthquakeShaker.shake(getPeer().getWindow());
         }
         updateErrorInfo(infoList);
         startTrackingValidation();
-        if (ContainerUtil.exists(infoList, info1 -> !info1.okEnabled)) return;
+        if (ContainerUtil.exists(infoList, info1 -> !info1.okEnabled)) {
+          return;
+        }
       }
       doOKAction();
     }
   }
 
-  private void recordAction(@NonNls String name, AWTEvent event) {
+  private void recordAction(String name, AWTEvent event) {
     if (event instanceof KeyEvent && ApplicationManager.getApplication() != null) {
+      //noinspection deprecation
       ActionsCollector.getInstance().record(name, (KeyEvent)event, getClass());
     }
   }
@@ -1985,17 +1929,15 @@ public abstract class DialogWrapper {
    * <code>{@link #setErrorText(String, JComponent)}</code> method.
    * @param text the error text to display
    */
-  protected void setErrorText(@NlsContexts.DialogMessage @Nullable final String text) {
+  protected void setErrorText(@NlsContexts.DialogMessage @Nullable String text) {
     setErrorText(text, null);
   }
 
-  protected void setErrorText(@NlsContexts.DialogMessage @Nullable final String text, @Nullable final JComponent component) {
-    setErrorInfoAll(text == null ?
-                    Collections.emptyList() :
-                    Collections.singletonList(new ValidationInfo(text, component)));
+  protected void setErrorText(@NlsContexts.DialogMessage @Nullable String text, @Nullable JComponent component) {
+    setErrorInfoAll(text == null ? List.of() : List.of(new ValidationInfo(text, component)));
   }
 
-  protected void setErrorInfoAll(@NotNull List<? extends ValidationInfo> info) {
+  protected void setErrorInfoAll(@NotNull List<ValidationInfo> info) {
     if (myInfo.equals(info)) return;
 
     Application application = ApplicationManager.getApplication();
@@ -2071,8 +2013,7 @@ public abstract class DialogWrapper {
     }
   }
 
-  @Nullable
-  public static DialogWrapper findInstance(Component c) {
+  public static @Nullable DialogWrapper findInstance(Component c) {
     while (c != null) {
       if (c instanceof DialogWrapperDialog) {
         return ((DialogWrapperDialog)c).getDialogWrapper();
@@ -2082,9 +2023,7 @@ public abstract class DialogWrapper {
     return null;
   }
 
-  @Nullable
-  @SuppressWarnings("unused")
-  public static DialogWrapper findInstanceFromFocus() {
+  public static @Nullable DialogWrapper findInstanceFromFocus() {
     return findInstance(KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner());
   }
 
@@ -2153,8 +2092,7 @@ public abstract class DialogWrapper {
     }
   }
 
-  @NotNull
-  public final DialogWrapperPeer getPeer() {
+  public final @NotNull DialogWrapperPeer getPeer() {
     return myPeer;
   }
 
@@ -2169,8 +2107,7 @@ public abstract class DialogWrapper {
     }
   }
 
-  @NotNull
-  public final Disposable getDisposable() {
+  public final @NotNull Disposable getDisposable() {
     return myDisposable;
   }
 
@@ -2181,84 +2118,6 @@ public abstract class DialogWrapper {
   public void disposeIfNeeded() {
     if (isDisposed()) return;
     Disposer.dispose(getDisposable());
-  }
-
-  /**
-   * @see Adapter
-   */
-  public interface DoNotAskOption {
-
-    abstract class Adapter implements DoNotAskOption {
-      /**
-       * Save the state of the checkbox in the settings, or perform some other related action.
-       * This method is called right after the dialog is {@link #close(int) closed}.
-       * <br/>
-       * Note that this method won't be called in the case when the dialog is closed by {@link #CANCEL_EXIT_CODE Cancel}
-       * if {@link #shouldSaveOptionsOnCancel() saving the choice on cancel is disabled} (which is by default).
-       *
-       * @param isSelected true if user selected "don't show again".
-       * @param exitCode   the {@link #getExitCode() exit code} of the dialog.
-       * @see #shouldSaveOptionsOnCancel()
-       */
-      public abstract void rememberChoice(boolean isSelected, int exitCode);
-
-      /**
-       * Tells whether the checkbox should be selected by default or not.
-       *
-       * @return true if the checkbox should be selected by default.
-       */
-      public boolean isSelectedByDefault() {
-        return false;
-      }
-
-      @Override
-      public boolean shouldSaveOptionsOnCancel() {
-        return false;
-      }
-
-      @NotNull
-      @Override
-      public String getDoNotShowMessage() {
-        return UIBundle.message("dialog.options.do.not.ask");
-      }
-
-      @Override
-      public final boolean isToBeShown() {
-        return !isSelectedByDefault();
-      }
-
-      @Override
-      public final void setToBeShown(boolean toBeShown, int exitCode) {
-        rememberChoice(!toBeShown, exitCode);
-      }
-
-      @Override
-      public final boolean canBeHidden() {
-        return true;
-      }
-    }
-
-    /**
-     * @return default selection state of checkbox (false -> checkbox selected)
-     */
-    boolean isToBeShown();
-
-    /**
-     * @param toBeShown - if dialog should be shown next time (checkbox selected -> false)
-     * @param exitCode of corresponding DialogWrapper
-     */
-    void setToBeShown(boolean toBeShown, int exitCode);
-
-    /**
-     * @return true if checkbox should be shown
-     */
-    boolean canBeHidden();
-
-    boolean shouldSaveOptionsOnCancel();
-
-    @NotNull
-    @NlsContexts.Checkbox
-    String getDoNotShowMessage();
   }
 
   private static class ErrorPainter extends AbstractPainter {
@@ -2293,8 +2152,7 @@ public abstract class DialogWrapper {
       try {
         ReflectionUtil.resetField(object, each);
       }
-      catch (Exception ignore) {
-      }
+      catch (Exception ignore) { }
     }
   }
 
@@ -2308,11 +2166,20 @@ public abstract class DialogWrapper {
 
     @Override
     public Color getBackground() {
-      final Color bg = UIManager.getColor("DialogWrapper.southPanelBackground");
+      Color bg = UIManager.getColor("DialogWrapper.southPanelBackground");
       if (myStyle == DialogStyle.COMPACT && bg != null) {
         return bg;
       }
       return super.getBackground();
     }
+  }
+
+  /**
+   * @deprecated Please use com.intellij.openapi.ui.DoNotAskOption instead
+   */
+  @Deprecated
+  @ApiStatus.ScheduledForRemoval(inVersion = "2022.2")
+  public interface DoNotAskOption extends com.intellij.openapi.ui.DoNotAskOption {
+    abstract class Adapter extends com.intellij.openapi.ui.DoNotAskOption.Adapter implements DoNotAskOption {}
   }
 }
